Changelog
=========

1.3.11 (unreleased)
-------------------

- Nothing changed yet.


1.3.10 (2014-11-18)
-------------------

- Improve total number of dossiers
- Add translations


1.3.9 (2014-11-18)
------------------

- Show total number of dossiers


1.3.8 (2014-11-10)
------------------

- Encode key before sending ajax request in listprivate script.


1.3.7 (2014-09-19)
------------------

- Fix csv export.


1.3.6 (2014-06-26)
------------------

- Fix advanced filter #commune syntax.


1.3.5 (2014-06-25)
------------------

- Change advanced filter to #commune.


1.3.4 (2014-06-24)
------------------

- Change URL irisnetlab into irisnet 


1.3.3 (2014-06-12)
------------------

- Show minus icon after expanding filter tab.


1.3.2 (2014-04-22)
------------------

- Remove some references to plonetheme.urbanisme.


1.3.1 (2012-12-28)
------------------

- Add youtube video below map (in translation files).


1.3.0 (2012-08-14)
------------------

- Nothing changed yet.


1.2.9 (2012-08-14)
------------------

- Encode utf-8 for documents label name.


1.2.8 (2012-08-14)
------------------

- Encode utf-8 for documents label name.


1.2.7 (2012-08-14)
------------------

- Change log error for documents.


1.2.6 (2012-08-14)
------------------

- Nothing changed yet. Bad fullrelease.


1.2.5 (2012-08-14)
------------------

- Add Documents into private view.


1.2.4 (2012-04-03)
------------------

- Fix : clean pdb ... 


1.2.3 (2012-04-03)
------------------

- Fix : Waws named zipcode instead of zipCode for private list dossier.


1.2.2 (2012-04-03)
------------------

- Fix : js change for active dossier.
- Revoke mandat use a 100 ms timeout.


1.2.1 (2012-03-05)
------------------

- Translation change. 


1.2 (2012-02-24)
----------------

- add into cirb eggs folder
- fix gis problem


1.1 (2012-01-24)
----------------

- Take webservices url form environnement or registry if env is empty.


1.0 (2012-01-06)
----------------
